--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{  
+{
   "name": "labvsuni-client-ts",
   "version": "0.1.0",
   "private": true,
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
